Fix errors and align text

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font-family: "Overpass", sans-serif;
-  background-image: linear-gradient(#ff9500, #ff5e3a)
+  height: 100%;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -13,19 +14,60 @@ html {
 }
 
 body {
+  background-image: linear-gradient(#ff9500, #ff5e3a);
+  height: 100%;
+  margin: 0;
+  padding: 6vmin;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: #fff;
   font-size: 1.125rem;
 }
 
 h1 {
-  text-align: center;
   font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  padding: 1.5rem;;
+}
+
+a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+}
+
+.button {
+  border: .2rem solid #fff;
+  padding: 1rem;
+  margin: 1.5rem;
+}
+
+a:hover, a:focus {
+  color: #ff5e3a;
 }
 
 .icon {
   position: relative;
-  height: 8em;
-  width: 8em;
+  height: 8rem;
+  width: 8rem;
 }
 
 .icon svg {
@@ -37,28 +79,18 @@ h1 {
   fill: currentColor;
 }
 
-body ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
-  margin: 0;
-  padding: 0;
-  grid-row-gap: 6vmin;
-}
+@media only screen and (min-width: 25em) {
 
-h2 {
-  font-weight: bold;
-  font-size: 1.5rem;
-}
+  h1 {
+    text-align: center;
+  }
 
-a {
-  border: .2rem solid #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: currentColor;
-}
-
-a:hover, a:focus {
-  color: #ff5e3a;
+  ul {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    margin: 0;
+    padding: 0;
+  }
 }
